examples/test/testpolicy3948.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3948
  namespace: namespace474
spec:
  podSelector:
    matchLabels:
      key6: value10
      key29: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value38
          key35: value42
          key21: value35
      podSelector:
        matchLabels:
          key3: value14
